compiler/driver/src/request/preflight/tests/core_library/snapshots/scoopc__request__preflight__tests__core_library__default_data_flow__default_data_flow_combined_hir.snap
---
source: compiler/driver/src/request/preflight/tests/core_library/default_data_flow.rs
expression: dump.text()
---
Module
  fun useCombinedDefaults(seed: Int): Int
    val local1
      Local seed : Int
    val local2
      Local $dependency.argument.0 : Int
    if
      IntegerOperation int.equals <no-gc> : Boolean
        Local $dependency.parameter.seed : Int
        IntegerLiteral 0 : Int
      val local5
        Local $dependency.parameter.seed : Int
      val local6
        IntegerLiteral 1 : Int
      val local7
        Local $dependency.default.local.4 : Int
      val local3
        IntegerOperation int.add <no-gc> : Int
          Local $dependency.default.local.3 : Int
          Local $dependency.default.local.5 : Int
      assign $dependency.default.local.9
        Local $dependency.default.local.1 : Int
    else
      val local4
        Local $dependency.parameter.seed : Int
      val local8
        Local $dependency.default.local.2 : Int
      val local9
        IntegerLiteral 2 : Int
      val local10
        Local $dependency.default.local.7 : Int
      assign $dependency.default.local.2
        IntegerOperation int.add <no-gc> : Int
          Local $dependency.default.local.6 : Int
          Local $dependency.default.local.8 : Int
      assign $dependency.default.local.9
        Local $dependency.default.local.2 : Int
    val local12
      Local $dependency.default.local.9 : Int
    val local17
      ImportedDependencyCall #0 : Int
        Local $dependency.parameter.seed : Int
        Local $dependency.parameter.value : Int
    val local13
      Local seed : Int
    val local14
      Local $dependency.argument.0 : Int
    val local15
      Local $dependency.parameter.seed : Int
    val local16
      IntegerOperation int.inc <no-gc> : Int
        Local $dependency.default.local.1 : Int
    val local18
      ImportedDependencyCall #1 : Int
        Local $dependency.parameter.seed : Int
        Local $dependency.parameter.value : Int
    val local19
      Local $dependency.argument.0 : Int
    return
      IntegerOperation int.add <no-gc> : Int
        Local $dependency.receiver : Int
        Local $dependency.parameter.other : Int
  fun main(): Unit
    val local0
      IntegerLiteral 0 : Int
    val local1
      Local $argument.0 : Int
    val local2
      Call useCombinedDefaults : Int
        Local $parameter.seed : Int
    val local3
      IntegerLiteral 3 : Int
    val local4
      Local $argument.0 : Int
    val local5
      Call useCombinedDefaults : Int
        Local $parameter.seed : Int
  output executable main
