compiler/driver/src/request/preflight/tests/core_library/snapshots/scoopc__request__preflight__tests__core_library__default_data_flow__default_data_flow_combined_lir.snap
---
source: compiler/driver/src/request/preflight/tests/core_library/default_data_flow.rs
expression: dump.text()
---
Module
  global @scoop$1$ss$229a4d048049cf9bf3e032011c7d4e6761bc12c77fae79ba745ea06c32b07585 : ptr<managed> scan=refs[0]
  fun @scoop$1$cb$0d849ce94979d4b7702f06612bcf2ac4afb3cc37937d4275e6ebf3b1bad07962(i32) -> i32
    local %0 $dependency.argument.0: i32
    local %1 $dependency.parameter.seed: i32
    local %2 $dependency.default.local.1: i32
    local %3 $dependency.default.local.2: i32
    local %4 $dependency.default.local.3: i32
    local %5 $dependency.default.local.4: i32
    local %6 $dependency.default.local.5: i32
    local %7 $dependency.default.local.6: i32
    local %8 $dependency.default.local.7: i32
    local %9 $dependency.default.local.8: i32
    local %10 $dependency.default.local.9: i32
    local %11 $dependency.parameter.value: i32
    local %12 $dependency.argument.0: i32
    local %13 $dependency.parameter.seed: i32
    local %14 $dependency.default.local.1: i32
    local %15 $dependency.parameter.value: i32
    local %16 $dependency.receiver: i32
    local %17 $dependency.argument.0: i32
    local %18 $dependency.parameter.other: i32
  block entry
    poll managed-void-target0 sp<managed-poll:0> live=[]
    store param0 -> local0
    store local0 -> local1
    t0 = integer_compare_Equal<Int> local1, integer<Int>(0x00000000) : i1
    cbr t0 then @if.then.1 else @if.else.2
  block if.then.1
    store local1 -> local4
    store integer<Int>(0x00000001) -> local5
    store local5 -> local6
    t1 = integer_Add<Int> local4, local6 : i32
    store t1 -> local2
    store local2 -> local10
    br @if.merge.3
  block if.else.2
    store local1 -> local3
    store local3 -> local7
    store integer<Int>(0x00000002) -> local8
    store local8 -> local9
    t2 = integer_Add<Int> local7, local9 : i32
    store t2 -> local3
    store local3 -> local10
    br @if.merge.3
  block if.merge.3
    store local10 -> local11
    call managed-direct-target0 sp<managed-call:0> live=[] t3 = sig=direct0 (i32, i32) -> i32 external-fn0(local1, local11)
    store t3 -> local16
    store param0 -> local12
    store local12 -> local13
    store local13 -> local14
    t4 = integer_Add<Int> local14, integer<Int>(0x00000001) : i32
    store t4 -> local15
    call managed-direct-target1 sp<managed-call:1> live=[] t5 = sig=direct1 (i32, i32) -> i32 external-fn1(local13, local15)
    store t5 -> local17
    store local17 -> local18
    t6 = integer_Add<Int> local16, local18 : i32
    ret t6
  fun @scoop$1$cb$231a9ff4d6fc765297e8eb2c6cee080892fcc69d9b541b4356dd49d5e5726fde() -> void
    local %0 $argument.0: i32
    local %1 $parameter.seed: i32
    local %2 first: i32
    local %3 $argument.0: i32
    local %4 $parameter.seed: i32
    local %5 second: i32
  block entry
    poll managed-void-target0 sp<managed-poll:0> live=[]
    store integer<Int>(0x00000000) -> local0
    store local0 -> local1
    call managed-direct-target0 sp<managed-call:0> live=[] t0 = sig=direct0 (i32) -> i32 local-fn0(local1)
    store t0 -> local2
    store integer<Int>(0x00000003) -> local3
    store local3 -> local4
    call managed-direct-target1 sp<managed-call:1> live=[] t1 = sig=direct1 (i32) -> i32 local-fn0(local4)
    store t1 -> local5
    ret
  fun @scoop$1$cb$35c3dc5c3c3d7d1d3b6d2a47d7e6d6c88d61bca0e08966efecf4802178cdefa3() -> i32
  block entry
    poll managed-void-target1 sp<managed-poll:0> live=[]
    invoke managed-void-target0 sp<managed-invoke:0> roots=[] sig=void0 () local-fn1() normal @success unwind @failure
    br @success
  block success
    ret integer<UInt>(0x00000000)
  block failure
    (t0, t1) = landingpad : (exception_record, ptr<raw>)
    t2 = begin_catch t1 : ptr<managed>
    global_store global0, t2
    end_catch
    ret integer<UInt>(0x00000001)
  output executable @scoop$1$cb$231a9ff4d6fc765297e8eb2c6cee080892fcc69d9b541b4356dd49d5e5726fde
