compiler/driver/src/request/preflight/tests/core_library/snapshots/scoopc__request__preflight__tests__core_library__default_data_flow__default_data_flow_combined_mir.snap
---
source: compiler/driver/src/request/preflight/tests/core_library/default_data_flow.rs
expression: dump.text()
---
Module
  fun useCombinedDefaults @fn0(seed: Int) -> Int
    bb0 entry
      val $dependency.argument.0: Int
        Type Int
        Local seed
      val $dependency.parameter.seed: Int
        Type Int
        Local $dependency.argument.0
      branch bb1 bb2
        Type Boolean
        IntegerCompare equal operands=Int result=Boolean
          Type Int
          Local $dependency.parameter.seed
          Type Int
          IntegerLiteral Int value=0 bits=0x00000000
    bb1 if.then.1
      val $default.local.3: Int
        Type Int
        Local $dependency.parameter.seed
      val $default.local.4: Int
        Type Int
        IntegerLiteral Int value=1 bits=0x00000001
      val $default.local.5: Int
        Type Int
        Local $default.local.4
      val $default.local.1: Int
        Type Int
        IntegerBinary add kind=Int
          Type Int
          Local $default.local.3
          Type Int
          Local $default.local.5
      assign $default.local.9
        Type Int
        Local $default.local.1
      goto bb3
    bb2 if.else.2
      var $default.local.2: Int
        Type Int
        Local $dependency.parameter.seed
      val $default.local.6: Int
        Type Int
        Local $default.local.2
      val $default.local.7: Int
        Type Int
        IntegerLiteral Int value=2 bits=0x00000002
      val $default.local.8: Int
        Type Int
        Local $default.local.7
      assign $default.local.2
        Type Int
        IntegerBinary add kind=Int
          Type Int
          Local $default.local.6
          Type Int
          Local $default.local.8
      assign $default.local.9
        Type Int
        Local $default.local.2
      goto bb3
    bb3 if.merge.3
      val $dependency.parameter.value: Int
        Type Int
        Local $default.local.9
      call $dependency.receiver: Int = external0 direct
        Type Int
        Local $dependency.parameter.seed
        Type Int
        Local $dependency.parameter.value
      val $dependency.argument.0: Int
        Type Int
        Local seed
      val $dependency.parameter.seed: Int
        Type Int
        Local $dependency.argument.0
      val $default.local.1: Int
        Type Int
        Local $dependency.parameter.seed
      val $dependency.parameter.value: Int
        Type Int
        IntegerUnary increment kind=Int
          Type Int
          Local $default.local.1
      call $dependency.argument.0: Int = external1 direct
        Type Int
        Local $dependency.parameter.seed
        Type Int
        Local $dependency.parameter.value
      val $dependency.parameter.other: Int
        Type Int
        Local $dependency.argument.0
      return
        Type Int
        IntegerBinary add kind=Int
          Type Int
          Local $dependency.receiver
          Type Int
          Local $dependency.parameter.other
  fun main @fn1() -> Unit
    bb0 entry
      val $argument.0: Int
        Type Int
        IntegerLiteral Int value=0 bits=0x00000000
      val $parameter.seed: Int
        Type Int
        Local $argument.0
      call first: Int = @fn0 direct
        Type Int
        Local $parameter.seed
      val $argument.0: Int
        Type Int
        IntegerLiteral Int value=3 bits=0x00000003
      val $parameter.seed: Int
        Type Int
        Local $argument.0
      call second: Int = @fn0 direct
        Type Int
        Local $parameter.seed
      return
  output executable @fn1
