compiler/driver/src/request/preflight/tests/core_library/snapshots/scoopc__request__preflight__tests__core_library__default_data_flow__default_data_flow_standalone_hir.snap
---
source: compiler/driver/src/request/preflight/tests/core_library/default_data_flow.rs
expression: dump.text()
---
Module
  fun useBranchDefault(): Int
    val local0
      IntegerLiteral 0 : Int
    val local1
      Local $dependency.argument.0 : Int
    if
      IntegerOperation int.equals <no-gc> : Boolean
        Local $dependency.parameter.seed : Int
        IntegerLiteral 0 : Int
      val local4
        Local $dependency.parameter.seed : Int
      val local5
        IntegerLiteral 1 : Int
      val local6
        Local $default.local.4 : Int
      val local2
        IntegerOperation int.add <no-gc> : Int
          Local $default.local.3 : Int
          Local $default.local.5 : Int
      assign $default.local.9
        Local $default.local.1 : Int
    else
      val local3
        Local $dependency.parameter.seed : Int
      val local7
        Local $default.local.2 : Int
      val local8
        IntegerLiteral 2 : Int
      val local9
        Local $default.local.7 : Int
      assign $default.local.2
        IntegerOperation int.add <no-gc> : Int
          Local $default.local.6 : Int
          Local $default.local.8 : Int
      assign $default.local.9
        Local $default.local.2 : Int
    val local11
      Local $default.local.9 : Int
    return
      Call external #0 : Int
        Local $dependency.parameter.seed : Int
        Local $dependency.parameter.value : Int
  fun main(): Unit
    val local0
      Call useBranchDefault : Int
  output executable main
