compiler/driver/src/request/preflight/tests/core_library/snapshots/scoopc__request__preflight__tests__core_library__default_data_flow__default_data_flow_standalone_lir.snap
---
source: compiler/driver/src/request/preflight/tests/core_library/default_data_flow.rs
expression: dump.text()
---
Module
  global @scoop$1$ss$229a4d048049cf9bf3e032011c7d4e6761bc12c77fae79ba745ea06c32b07585 : ptr<managed> scan=refs[0]
  fun @scoop$1$cb$3b943d7328e13f9e445290750e5fc6c3a7394ae315ed05ebe6553adb20ad1a3e() -> i32
    local %0 $dependency.argument.0: i32
    local %1 $dependency.parameter.seed: i32
    local %2 $default.local.1: i32
    local %3 $default.local.2: i32
    local %4 $default.local.3: i32
    local %5 $default.local.4: i32
    local %6 $default.local.5: i32
    local %7 $default.local.6: i32
    local %8 $default.local.7: i32
    local %9 $default.local.8: i32
    local %10 $default.local.9: i32
    local %11 $dependency.parameter.value: i32
    local %12 $call.1: i32
  block entry
    poll managed-void-target0 sp<managed-poll:0> live=[]
    store integer<Int>(0x00000000) -> local0
    store local0 -> local1
    t0 = integer_compare_Equal<Int> local1, integer<Int>(0x00000000) : i1
    cbr t0 then @if.then.1 else @if.else.2
  block if.then.1
    store local1 -> local4
    store integer<Int>(0x00000001) -> local5
    store local5 -> local6
    t1 = integer_Add<Int> local4, local6 : i32
    store t1 -> local2
    store local2 -> local10
    br @if.merge.3
  block if.else.2
    store local1 -> local3
    store local3 -> local7
    store integer<Int>(0x00000002) -> local8
    store local8 -> local9
    t2 = integer_Add<Int> local7, local9 : i32
    store t2 -> local3
    store local3 -> local10
    br @if.merge.3
  block if.merge.3
    store local10 -> local11
    call managed-direct-target0 sp<managed-call:0> live=[] t3 = sig=direct0 (i32, i32) -> i32 external-fn0(local1, local11)
    store t3 -> local12
    ret local12
  fun @scoop$1$cb$231a9ff4d6fc765297e8eb2c6cee080892fcc69d9b541b4356dd49d5e5726fde() -> void
    local %0 value: i32
  block entry
    poll managed-void-target0 sp<managed-poll:0> live=[]
    call managed-direct-target0 sp<managed-call:0> live=[] t0 = sig=direct0 () -> i32 local-fn0()
    store t0 -> local0
    ret
  fun @scoop$1$cb$35c3dc5c3c3d7d1d3b6d2a47d7e6d6c88d61bca0e08966efecf4802178cdefa3() -> i32
  block entry
    poll managed-void-target1 sp<managed-poll:0> live=[]
    invoke managed-void-target0 sp<managed-invoke:0> roots=[] sig=void0 () local-fn1() normal @success unwind @failure
    br @success
  block success
    ret integer<UInt>(0x00000000)
  block failure
    (t0, t1) = landingpad : (exception_record, ptr<raw>)
    t2 = begin_catch t1 : ptr<managed>
    call managed-direct-target0 sp<managed-call:0> live=[t2:ptr<managed>@0] t3 = sig=direct0 (ptr<managed>) -> ptr<managed> runtime @scoop_rt_materialize_exception(t2)
    global_store global0, t3
    end_catch
    ret integer<UInt>(0x00000001)
  output executable @scoop$1$cb$231a9ff4d6fc765297e8eb2c6cee080892fcc69d9b541b4356dd49d5e5726fde
